plugins {
    id 'org.springframework.boot' version '2.6.7'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.swozo'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "17.PREVIEW"
targetCompatibility = "17.PREVIEW"

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    flatDir {
        dir '../swozo-commons/build/libs'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.swozo:swozo-commons:0.0.1-SNAPSHOT'
    implementation 'com.google.cloud:google-cloud-compute:1.9.1'
    implementation 'org.jetbrains:annotations:20.1.0'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += ['--enable-preview', '-Duser.timezone=UTC']
}

tasks.named('test') {
    useJUnitPlatform()
}
